--- a/resources/pi-hud.ui
+++ b/resources/pi-hud.ui
@@ -114,7 +114,7 @@ QDoubleSpinBox:
      <x>280</x>
      <y>230</y>
      <width>120</width>
-     <height>70</height>
+     <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -176,7 +176,7 @@ QDoubleSpinBox:
      <x>110</x>
      <y>100</y>
      <width>251</width>
-     <height>111</height>
+     <height>121</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -255,7 +255,7 @@ QDoubleSpinBox:
      <x>80</x>
      <y>230</y>
      <width>120</width>
-     <height>70</height>
+     <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -323,7 +323,7 @@ QDoubleSpinBox:
      <x>10</x>
      <y>100</y>
      <width>60</width>
-     <height>200</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -392,7 +392,7 @@ QDoubleSpinBox:
      <x>409</x>
      <y>100</y>
      <width>60</width>
-     <height>200</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="contextMenuPolicy">
@@ -467,7 +467,7 @@ QDoubleSpinBox:
      <x>210</x>
      <y>240</y>
      <width>61</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -475,12 +475,12 @@ QDoubleSpinBox:
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>resources/dpf.png</normaloff>resources/dpf.png</iconset>
+     <normaloff>dpf.png</normaloff>dpf.png</iconset>
    </property>
    <property name="iconSize">
     <size>
-     <width>50</width>
-     <height>50</height>
+     <width>61</width>
+     <height>61</height>
     </size>
    </property>
    <property name="checkable">
