--- a/resources/pi-hud.ui
+++ b/resources/pi-hud.ui
@@ -33,12 +33,23 @@ QDoubleSpinBox
 {
 	color: white;
 }
-QGroupBox 
-{ 
-     border: 3px solid gray; 
-     border-radius: 5px; 
- } 
-</string>
+QGroupBox {
+    border: 2px solid gray;
+    border-color: #FF17365D;
+    margin-top: 18px;
+    font-size: 10px;
+}
+
+QGroupBox::title {
+    subcontrol-origin: margin;
+    subcontrol-position: top center;
+    padding: 5px 800px;
+    background-color: #FF17365D;
+    color: rgb(255, 255, 255);
+}
+QLabel {
+	color: white;
+}</string>
   </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
@@ -50,16 +61,24 @@ QGroupBox
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QGroupBox
-{
-	color: rgb(255, 255, 255);
-}
-</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>RPM</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QProgressBar" name="rpmBar">
       <property name="sizePolicy">
@@ -125,18 +144,30 @@ QGroupBox
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>DPF Temp</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QSpinBox" name="dpfTempSpin">
       <property name="font">
        <font>
         <family>Consolas</family>
-        <pointsize>17</pointsize>
+        <pointsize>20</pointsize>
        </font>
       </property>
       <property name="focusPolicy">
@@ -180,19 +211,31 @@ QGroupBox
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>100</x>
      <y>100</y>
-     <width>251</width>
+     <width>270</width>
      <height>121</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>Speed</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QSpinBox" name="speedSpin">
       <property name="sizePolicy">
@@ -266,18 +309,30 @@ QGroupBox
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
-    <string>DPF Dist</string>
+    <string>DPF Distance</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QSpinBox" name="dpfDistSpin">
       <property name="font">
        <font>
         <family>Consolas</family>
-        <pointsize>17</pointsize>
+        <pointsize>20</pointsize>
        </font>
       </property>
       <property name="focusPolicy">
@@ -334,7 +389,7 @@ QGroupBox
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>Temp</string>
@@ -343,6 +398,18 @@ QGroupBox
     <set>Qt::AlignCenter</set>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_6">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QProgressBar" name="tempBar">
       <property name="sizePolicy">
@@ -406,8 +473,7 @@ QGroupBox
     <enum>Qt::PreventContextMenu</enum>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);
-border-color: rgb(255, 255, 255);</string>
+    <string notr="true"/>
    </property>
    <property name="title">
     <string>Load</string>
@@ -416,6 +482,18 @@ border-color: rgb(255, 255, 255);</string>
     <set>Qt::AlignCenter</set>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_7">
+    <property name="leftMargin">
+     <number>5</number>
+    </property>
+    <property name="topMargin">
+     <number>5</number>
+    </property>
+    <property name="rightMargin">
+     <number>5</number>
+    </property>
+    <property name="bottomMargin">
+     <number>5</number>
+    </property>
     <item>
      <widget class="QProgressBar" name="loadBar">
       <property name="sizePolicy">
