--- a/resources/pi-hud.ui
+++ b/resources/pi-hud.ui
@@ -312,7 +312,7 @@ QLabel {
     <string notr="true"/>
    </property>
    <property name="title">
-    <string>DPF Distance</string>
+    <string>HEV Battery Current</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <property name="leftMargin">
@@ -347,6 +347,9 @@ QLabel {
       <property name="buttonSymbols">
        <enum>QAbstractSpinBox::NoButtons</enum>
       </property>
+      <property name="minimum">
+       <number>-1000</number>
+      </property>
       <property name="maximum">
        <number>1000</number>
       </property>
@@ -373,7 +376,7 @@ QLabel {
        </size>
       </property>
       <property name="text">
-       <string>km</string>
+       <string>A</string>
       </property>
      </widget>
     </item>
